FIX(communication): corregir error de persistencia en cascada al crear Hilo con Mensaje inicial
Garantizar la generación automática de IDs tipo UUID para la entidad Hilo y asegurar
la consistencia en memoria de la relación bidireccional con sus Mensajes.

- Se añade la anotación @GeneratedValue(strategy = GenerationType.UUID) a la clave primaria de la entidad Hilo.
- Se implementa el método helper 'agregarMensaje(Mensaje)' en Hilo para automatizar el binding bidireccional de la relación.
- Se configura el tipo de cascada completo (CascadeType.ALL) en la relación @OneToMany en Hilo para delegar la persistencia de los mensajes hijos.
- Se ajusta la capa de servicio 'CommunicationService' para aprovechar el método de sincronización y limpiar el flujo de persistencia transaccional.

Previene la excepción JpaSystemException: 'Identifier of entity must be manually assigned before calling persist()'.